Closed
Bug 1312678
Opened 7 years ago
Closed 7 years ago
WebGL falls back to software-rendering on linux/radeonsi (and any other driver that uses DRI)
Categories
(Core :: Security: Process Sandboxing, defect)
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: linuxhippy, Unassigned)
References
Details
(Keywords: regression, Whiteboard: sb+)
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0 Build ID: 20161020152750 Steps to reproduce: WebGL falls back to extremly slow software rendering with nightly on linux for radeon GPUs running the "radeonsi" open-source driver. On the console, the following lines are logged: libGL error: failed to open drm device: Permission denied libGL error: failed to load driver: radeonsi On the same machine, the Firefox 49 works flawless.
Comment 1•7 years ago
|
||
Clemens would you try to find a regression range maybe using Mozregression? (http://mozilla.github.io/mozregression/)
Flags: needinfo?(linuxhippy)
Reporter | ||
Comment 2•7 years ago
|
||
According to mozregression this was introduced by: https://bugzilla.mozilla.org/show_bug.cgi?id=1289718 Makes perfect sense, that security stuff intercepts files the radeon driver needs to access. The whole idea of intercepting file access sounds a bit like a maintenance nightmare.
Reporter | ||
Updated•7 years ago
|
Flags: needinfo?(linuxhippy)
Comment 3•7 years ago
|
||
This looks like the same problem as bug 1312894. Running with MOZ_SANDBOX_VERBOSE set in the environment would show the filename it's trying to open.
Reporter | ||
Comment 5•7 years ago
|
||
Bug 1312894 actually seems to deal with two different issues: - failure to initialize an accalerated GL context, leading to ... - a crash in je_free, caused by LLVM issues
Comment 6•7 years ago
|
||
This seems the same error as the one from https://bugzilla.mozilla.org/show_bug.cgi?id=1312894#c9 : Sandbox: SandboxBroker: denied op=0 rflags=2000002 perms=3 path=/dev/dri/card0 for pid=7505 error="No such file or directory" Sandbox: Rejected errno -13 op 0 flags 02000002 path /dev/dri/card0 Jed, do you think that we should dupe over 1312894? I don't see two issues in 1312894 as Clemens suggested in Comment5.
Flags: needinfo?(jld)
Updated•7 years ago
|
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Untriaged → Security: Process Sandboxing
Ever confirmed: true
Flags: needinfo?(jld)
Keywords: regression
OS: Unspecified → Linux
Product: Firefox → Core
Summary: WebGL falls back to software-rendering on linux/radeonsi [regress] → WebGL falls back to software-rendering on linux/radeonsi (and any other driver that uses DRI)
Comment hidden (mozreview-request) |
Comment 9•7 years ago
|
||
mozreview-review |
Comment on attachment 8806846 [details] Bug 1312678 - Whitelist DRI drivers in the content sandbox, for WebGL. https://reviewboard.mozilla.org/r/90142/#review89862
Attachment #8806846 -
Flags: review?(jld) → review+
Comment 10•7 years ago
|
||
Pushed by gpascutto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f9e1ac583906 Whitelist DRI drivers in the content sandbox, for WebGL. r=jld
![]() |
||
Updated•7 years ago
|
Whiteboard: sb+
Comment 11•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/f9e1ac583906
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•