Bug 1312678 - Whitelist DRI drivers in the content sandbox, for WebGL. r=jld

MozReview-Commit-ID: 82nCmXqnCbp