security/sandbox/linux/broker/SandboxBrokerPolicyFactory.cpp
@@ -139,6 +139,10 @@ SandboxBrokerPolicyFactory::SandboxBrokerPolicyFactory()
 
   // Bug 1308851: NVIDIA proprietary driver when using WebGL
   policy->AddPrefix(rdwr, "/dev", "nvidia");
+
+  // Bug 1312678: radeonsi/Intel with DRI when using WebGL
+  policy->AddDir(rdwr, "/dev/dri");
+
   mCommonContentPolicy.reset(policy);
 #endif
 }
